<resources>
    <string name="app_name">Addnote</string>
    <string name="app_title">Title</string>
    <string name="app_text">Note</string>
    <string name="note_title_label">Title</string>
    <string name="note_title_hint">Enter title</string>
    <string name="note_text_label">Note</string>
    <string name="note_text_hint">Enter Note</string>
    <string name="notification">Notification</string>
    <string name="addnotebutton">Add note</string>
    <string name="deletenote">Delete note</string>
    <string name="delete">Do you want to delete this note?</string>
    <string name="date_dialog">Date</string>
    <string name="time_dialog">Time</string>
    <string name="note_creating_date">The note was created in</string>
    <string-array name="titles">
        <item>h</item>
    </string-array>
</resources>
