<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:scrollbars="vertical"
    android:padding="8dp"
    android:isScrollContainer="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_date"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:id="@+id/radio_group"
        >
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/color5"
        android:id="@+id/pager_radio_1"
        />
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/color2"
        android:id="@+id/pager_radio_2"
        />
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/color3"
        android:id="@+id/pager_radio_3"
        />
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/color1"
        android:id="@+id/pager_radio_4"
        />
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/color6"
        android:id="@+id/pager_radio_5"
        />
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/color7"
        android:id="@+id/pager_radio_6"
        />
    </RadioGroup>


<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/color1"
    app:cardElevation="4dp"
    app:contentPadding="8dp"
    app:cardUseCompatPadding="true"
    android:id="@+id/card_1"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/note_title_label"
                style="?android:listSeparatorTextViewStyle"
                />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/note_title"
        android:layout_marginRight="16dp"
        android:maxLength="32"
        android:gravity="left"
        android:hint="@string/note_title_hint"
        />
    </LinearLayout>
</android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/color1"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="8dp"
        android:minHeight="350dp"
        android:scrollbars="vertical"
        android:isScrollContainer="true"
        android:id="@+id/card_2"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_text_label"
        style="?android:listSeparatorTextViewStyle"
        />

            <EditText
                android:id="@+id/note_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="fill"
                android:layout_marginRight="16dp"
                android:gravity="left"
                android:hint="@string/note_text_hint"
                android:background="@null"
                android:autoSizeTextType="uniform"
                android:typeface="monospace"
                android:scrollHorizontally="true"
                android:singleLine="false" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/color1"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="8dp"
        android:id="@+id/card_3"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notification"
                style="?android:listSeparatorTextViewStyle"
                />
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:id="@+id/fragment_addnote_pager_date_switch"
                />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:id="@+id/fragment_addnote_pager_date_button"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_addnote_pager_time_button"
                android:layout_weight="2"
                />


        </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
</ScrollView>
